tests/ui/expected-literal.stderr
error: unexpected token, expected a string literal
 --> tests/ui/expected-literal.rs:3:17
  |
3 | #[efg(feature = STD)]
  |                 ^^^
