tests/ui/expected-literal.rs
use efg::efg;

#[efg(feature = STD)]
struct S;

fn main() {}
